# hecate

./: .gitignore  Cargo.toml  README.md  addition.bf  all.hasm  demo.hasm  out.hasm  syscall.hasm  test.hasm  turtle.hasm  turtle2.hasm
.github/workflows/: ci.yml  publish.yml
common/: Cargo.toml
common/src/: lib.rs
crates/assembler/: Cargo.toml
crates/assembler/src/: disassembler.rs  lib.rs  main.rs
crates/assembler/src/snapshots/: hecate_assembler__tests__assemble_program.snap.new
crates/bf/: Cargo.toml
crates/bf/src/: lib.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  native.rs
crates/packer/: Cargo.toml
crates/packer/src/: main.rs
crates/turtle/: Cargo.toml
crates/turtle/src/: main.rs
hasm/: Cargo.toml
hasm/src/: disassembler.rs  lib.rs  main.rs
hasm/src/snapshots/: hasm__tests__assemble_program.snap
src/: main.rs  native.rs
