[package]
name = "hecate-assembler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hasm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
num-traits = "0.2.19"
hecate-common = { version = "0.1.0", path = "../common" }
num-derive = "0.4.2"
thiserror = "2.0.7"
anyhow = "1.0.94"
byteorder = "1.5.0"

[dev-dependencies]
insta = { version = "1.41.1", features = ["yaml"] }
