[package]
name = "hecate-assembler"
version = "0.2.0"
edition = "2021"
description = "The assembler for the hecate vm"
license-file = "../../LICENSE"
repository = "https://github.com/hecate-vm/hecate-vm"

[[bin]]
name = "hasm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
num-traits = "0.2.19"
hecate-common = { version = "0.2.0", path = "../common" }
num-derive = "0.4.2"
thiserror = "2.0.7"
indexmap = "2.7.0"

[dev-dependencies]
insta = { version = "1.41.1", features = ["yaml"] }
