[package]
name = "hecate-bf"
version = "0.3.0"
edition = "2021"
description = "A brainfck to hasm compiler for the hecate vm"
license-file = "../../LICENSE"
repository = "https://github.com/hecate-vm/hecate-vm"

[dependencies]
fck = "0.1.2"
hecate-assembler = { version = "0.3.0", path = "../assembler" }
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.95"
stringlit = "2.1.0"
