[package]
name = "hecate-common"
version = "0.2.0"
edition = "2021"
description = "Common data structures for the hecate vm"
license-file = "../../LICENSE"
repository = "https://github.com/hecate-vm/hecate-vm"

[dependencies]
bincode = "1.3.3"
indexmap = { version = "2.7.0", features = ["serde"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
once_cell = "1.20.2"
serde = { version = "1.0.216", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.6"
