[package]
name = "hecate-turtle"
version = "0.5.0"
edition = "2021"
description = "A turtle implementation based on hecate vm"
license-file = "../../LICENSE"
repository = "https://github.com/hecate-vm/hecate-vm"

[[bin]]
name = "hasm-turtle"
path = "src/main.rs"

[dependencies]
hecate-common = { version = "0.4.0", path = "../common" }
hecate-assembler = { version = "0.4.0", path = "../assembler" }
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.95"
macroquad = "0.4.13"
